--- a/WhatToDo/WhatToDo/AppShell.xaml
+++ b/WhatToDo/WhatToDo/AppShell.xaml
@@ -3,7 +3,7 @@
     x:Class="WhatToDo.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:view="clr-namespace:WhatToDo.View"
+    xmlns:view="clr-namespace:WhatToDo.Views.Pages"
     Shell.FlyoutBehavior="Disabled">
 
     
